2003-01-30  Kazu Hirata  <kazu@cs.umass.edu>

	* config/arm/arm.c: Fix comment typos.
	* config/arm/arm.h: Likewise.
	* config/arm/netbsd-elf.h: Likewise.
	* config/arm/netbsd.h: Likewise.

2003-01-30  Geoffrey Keating  <geoffk@apple.com>

	* gengtype.c (struct walk_type_data): Add needs_cast_p.
	(walk_type): Set needs_cast_p in walk_type_data.
	(write_types_process_field): Supply casts when required to suppress
	warnings.
	(write_root): Cast gt_pch_n_S to suppress warning.
	* Makefile.in: Remove -Wno-error from gtype-desc.o and c-decl.o.
	* cp/Make-lang.in: Remove -Wno-error from cp/decl.o.
	* config/rs6000/rs6000.c (print_operand): Mask off high bits only
	when they might exist.
	* config/rs6000/t-rs6000: Remove -Wno-error from varasm.o,
	insn-conditions.o, and rs6000.o.

2003-01-30  Richard Henderson  <rth@redhat.com>

	* ggc-page.c (G.context_depth_allocations): New.
	(G.context_depth_collections): New.
	(alloc_page): Set G.context_depth_allocations.
	(ggc_collect): Set G.context_depth_collections.
	(ggc_push_context): Limit to HOST_BITS_PER_LONG contexts.
	(ggc_pop_context): Early exit for no allocations or collections.

2003-01-30  Richard Henderson  <rth@redhat.com>

	* tree-inline.c (walk_tree): Streamline duplicate hash table lookup.

2003-01-30  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (arm_compute_initial_elimination_offset): If optimizing for
	size, the link register is always saved if any other register is
	saved.

2003-01-30  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300-protos.h: Update the prototype for
	compute_plussi_cc.
	(cpp_reader): Declare before it is used.
	* config/h8300/h8300.c (compute_plussi_cc): Change the return
	type to int.
	* config/h8300/h8300.md (monitor_prologue): Call abort() if we
	see an unknown H8 variant.

2003-01-30  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	PR target/9316 
	* config/rs6000/rtems.h: Add CPP_OS_DEFAULT_SPEC.
	* config/rs6000/sysv4.h: Add CPP_OS_RTEMS_SPEC.